2007-11-24  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (apropos-symbols):  Use simple search instead of
	regexps.
	(make-apropos-matcher): Used to be make-regexp-matcher.

	(*sldb-printer-bindings*): Set *print-right-margin* to
	most-positive-fixnum. This prints each frame in the backtrace in a
	single long line.  But is suboptimal for other purposes, like
	eval-in-frame.
	
	(setup-server): Initialize multiprocessing here, so that is also
	done for create-server.

2007-11-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (swank-require): Fix typo (:key was used instead of
	:test.)  Reported by Stelian Ionescu.
	
2007-11-22  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (swank-require): Don't search the file if the
	module-name is present in *modules*. That should avoid problems if
	swank is included in a core file and moved to a different
	location.  Reported by John Wiegley.

2007-11-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-repl-mode-map, slime-repl-read-mode),
	(slime-compiler-notes-mode-map, slime-xref-mode-map),
	(sldb-mode-map, slime-connection-list-mode-map),
	(slime-inspector-mode-map): Added bindings for [return] in
	addition to (kbd "RET"). The reason is that pressing enter in X is
	translated to (kbd "RET") only if no binding for [return] is
	active; if [return] is bound to something, pressing enter is
	translated to this key binding henceforth, as was explained to me
	by Pierre Gaston, thanks! This can cause quite confusing behaviour
	as Andreas Davour faced in his post <cs9k5ofqbt7.fsf@Psilocybe.Update.UU.SE> 
	to comp.lang.lisp.
	
2007-11-06  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-events-buffer, slime-inspector-buffer): Disable
	undo.

2007-11-01  Tobias C. Rittweiler  <tcr@freebits.de>

	The inspector page layout has changed slightly. Before the header
	looked like

	  A proper list.
            [type: CONS]
	  -------------------

	It now looks like

	  #<CONS {B3DBD39}>: