@@ -1628,20 +1628,10 @@ Return the symbol and a flag indicating whether the symbols was found."
 (defun parse-package (string)
   "Find the package named STRING.
 Return the package or nil."
-  (check-type string (or string null))
-  (if (zerop (length string))
-      nil
-      (multiple-value-bind (name pos interned?) 
-          (let ((*package* *swank-io-package*))
-            (ignore-errors (read-softly-from-string string)))
-        (unwind-protect
-             (and name
-                  (or (symbolp name) 
-                      (stringp name))
-                  (= (length string) pos)
-                  (find-package name))
-          (when interned?
-            (unintern-in-home-package name))))))
+  ;; STRING comes usually from a (in-package STRING) form.
+  (ignore-errors
+    (find-package (let ((*package* *swank-io-package*))
+                    (read-from-string string)))))
 
 (defun unparse-name (string)
   "Print the name STRING according to the current printer settings."
